--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -4,12 +4,15 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: images
 :stylesDir: stylesheets
 
-AddressBook - Level 4 was developed by the https://se-edu.github.io/docs/Team.html[se-edu] team. +
-But we have renamed the application so that it evokes a positive appeal among others.We have named our product as 'Weaver' +
+We are a team consisting of four members based in the http://www.comp.nus.edu.sg[School of Computing, National University of Singapore]. +
+We are currently Computer Science students pursuing an undergraduate degree here at NUS.
+Our TeamID is `W13-B2`.
+
+The `Weaver` application was developed by our team for our Software Engineering project.
+It is adapted from the AddressBook - Level 4 that was developed by the https://se-edu.github.io/docs/Team.html[se-edu] team. +
+We have renamed the application as such so that it evokes a positive appeal among others. +
+Weaver symbolises the weaving of out contacts in order to stay connected. +
 {empty} +
-We are a team of four members based in the http://www.comp.nus.edu.sg[School of Computing, National University of Singapore].
-Each of us are Year two Computer Science students pursuing an undergraduate degree here at NUS.
-Our TeamID is W13-B2.
 
 == Project Team
 
@@ -19,9 +22,9 @@ image::ronaklakhotia.png[width="150", align="left"]
 
 Role: Co-ordination and Testing +
 
-** Responsibilities: Overall co-ordination of the project is taken care of.
-** Ensures that any code pushed to the team repositiory is tested and passes all test cases.
-** Also suggests modifications to be made in the features.Also in charge of Logic Component of the project.
+Responsibilities: Overall co-ordination of the project is taken care of.
+Ensures that any code pushed to the team repository is tested and passes all test cases.
+Also suggests modifications to be made in the features. Also in charge of Logic Component of the project.
 
 '''
 
@@ -30,10 +33,9 @@ image::chenxiaoman.png[width="150", align="left"]
 {empty}[https://github.com/ChenXiaoman[github]]
 
 Role: Scheduling and Tracking +
-
-** Responsibilities: Ensure that all deadlines and Deliverables are met on time. +
-** Send out timely reminders to the other team members to finish the assigned task. +
-** Make sure that all work is done in the correct format.In addition,in charge of Model Component of project. +
+Responsibilities: Ensure that all deadlines and Deliverables are met on time.
+Send out timely reminders to the other team members to finish the assigned task.
+Make sure that all work is done in the correct format.In addition, in charge of the Model Component of project.
 
 '''
 
@@ -41,11 +43,9 @@ Role: Scheduling and Tracking +
 image::yangminxing.png[width="150", align="left"]
 {empty}[https://github.com/yangminxingnus[github]]
 
-Role: In charhe of Storage and UI +
-
-** Responsibilities: Ensure that the interface of the Application is of good quality.
-** Be well werse with JAVAFX in particular.
-** As for main components,in charge of storage therby by overlooking the changes made to storage component.
+Role: In charge of Storage and UI +
+Responsibilities: Ensure that the interface of the Application is of good quality.
+Ensures competency with JAVAFX. As for main components, is in charge of storage by overlooking the changes made to storage component.
 
 '''
 
@@ -53,10 +53,9 @@ Role: In charhe of Storage and UI +
 image::pjunwei.png[width="150", align="left"]
 {empty}[https://github.com/pjunwei95[github]]
 
-Role: Code Quality,Integration and Documentation +
-
-** Responsibilities: Ensure the code quality of the SUT is maintained at all times.
-** Ensure that the code is not broken at any given time.In charge of documentation as well.
-** Makes sure that the User Guide and Developer Guide are updated from time to time.
+Role: Code Quality, Integration and Documentation +
+Responsibilities: Ensure the code quality of the SUT is maintained at all times.
+Ensure that the code is not broken at any given time.
+In charge of documentation and the storage component as well. Makes sure that the User Guide and Developer Guide are updated from time to time.
 
 '''
