--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -79,12 +79,14 @@ Adds a person to the address book +
 Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/DATE_OF_BIRTH r/MODNAME/MODTYPE/MODNUM f/FILE_PATH [t/TAG]...`
 
 [TIP]
-A person can have any number of tags (including 0)
+A person can have any number of tags (including 0).
+Minimum requirement of the fields are NAME, PHONE, EMAIL.
 
 Examples:
 
 * `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01 b/13.10.1997 f/nus.jpg`
 * `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison p/1234567 b/13.10.1997 f/nus.jpg t/criminal`
+* `add n/John Doe p/98765432 e/johnd@example.com`
 
 === Listing all persons : `list`
 
@@ -94,7 +96,7 @@ Format: `list`
 === Editing a person : `edit`
 
 Edits an existing person in the address book. +
-Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [b/DATE_OF_BIRTH] [t/TAG]...`
+Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [b/DATE_OF_BIRTH] [r/MODNAME/MODTYPE/MODNUM] [t/TAG]...`
 
 ****
 * Edits the person at the specified `INDEX`. The index refers to the index number shown in the last person listing. The index *must be a positive integer* 1, 2, 3, ...
@@ -323,6 +325,13 @@ Users now can login using valid accounts. And their files are seperated.
 
 To logout, just click logout in the "file - > logout" button.
 
+=== Register SINCE V1.3
+
+Users now can register new valid accounts.
+
+The new account's username must be different from all previous ones.
+
+
 === Customize tags' color : `color` SINCE V1.2
 
 Change the color of one or more than one tags. +
@@ -386,7 +395,7 @@ this will delete the photo attached with the person at index 1.
 ****
 
 
-=== FaceBook Integration (SINCE V1.3)
+=== FaceBook Integration SINCE V1.3
 
 Helps you view the profile page of a person in your contact list. +
 
