--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -76,11 +76,7 @@ Format: `help`
 === Adding a person: `add`
 
 Adds a person to the address book +
-<<<<<<< HEAD
-Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/DATE_OF_BIRTH f/FILE_PATH r/MODULES_TAKEN_IN_SCHOOL u/[FACEBOOK USERNAME] [t/TAG]...`
-=======
 Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/DATE_OF_BIRTH r/MODNAME/MODTYPE/MODNUM f/FILE_PATH [t/TAG]...`
->>>>>>> 354a8ccf7981533a46244ed84dbee59d910e0508
 
 [TIP]
 A person can have any number of tags (including 0).
@@ -100,11 +96,7 @@ Format: `list`
 === Editing a person : `edit`
 
 Edits an existing person in the address book. +
-<<<<<<< HEAD
-Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [b/DATE_OF_BIRTH] [u/FACEBOOK_USERNAME] [r/MODULES] [f/FILE_IMAGE] [t/TAG]...`
-=======
 Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [b/DATE_OF_BIRTH] [r/MODNAME/MODTYPE/MODNUM] [t/TAG]...`
->>>>>>> 354a8ccf7981533a46244ed84dbee59d910e0508
 
 ****
 * Edits the person at the specified `INDEX`. The index refers to the index number shown in the last person listing. The index *must be a positive integer* 1, 2, 3, ...
@@ -494,7 +486,7 @@ The above command will change the due date of the reminder to the new date. +
 
 Auto-complete your commands by providing suggestions. +
 
-image::autocompletion.png[]
+image::autocompletion.png[width="790"]
 
 Type any letters to get some suggestions on what command to use.
 
@@ -506,7 +498,7 @@ Format: `clear` +
 
 A clear confirmation will pop-up to reaffirm your clear command in the event of accidental clearing. +
 
-image::clearconfirmation.png[]
+image::clearconfirmation.png[width="790"]
 
 By default, you will be able to confirm clearing by pressing `ENTER` on the keyboard, or clicking `OK`.
 
