--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -133,29 +133,6 @@ Returns `john` and `John Doe`
 * `find Betsy Tim John` +
 Returns any person having names `Betsy`, `Tim`, or `John`
 
-=== Locating persons by tag: `findtag`
-
-Finds persons whose tags contain any of the given keywords. +
-Format: `findtag KEYWORD [MORE_KEYWORDS]`
-
-[TIP]
-Make sure there are no whitespaces between `find` and `tag`!
-
-****
-* Given three people with tags: `John Doe t/Friends`, `Hans Gruber t/Friends`, and `Bo Yang t/Colleagues`
-* The search is case insensitive. e.g `friends` will match `Friends`
-* All the tags are searched.
-* Only full words will be matched e.g. `Friend` will not match `Friends`
-* Persons matching at least one keyword will be returned (i.e. `OR` search). e.g. `friends` will return `John Doe`, `Hans Gruber`
-****
-
-Examples:
-
-* `findtag friends` +
-Returns `John Doe` and `Hans Gruber`
-* `findtag friends colleagues` +
-Returns any person having tags `Friends` or `Colleagues`
-
 image::Search.png[width="600"]
 
 === Searching a person : `search`
@@ -195,29 +172,6 @@ Deletes the 2nd person in the address book.
 * `find Betsy` +
 `delete 1` +
 Deletes the 1st person in the results of the `find` command.
-
-=== Deleting a person's tag : `deletetag`
-
-Deletes the tag(s) of an existing person in the address book. +
-Format: `deletetag INDEX [t/TAG]...`
-
-****
-* Deletes the tag of the person at the specified `INDEX`. The index refers to the index number shown in the last person listing. The index *must be a positive integer* 1, 2, 3, ...
-* The search is case insensitive. e.g `friends` will match `Friends`
-* Only full words will be matched e.g. `Friend` will not match `Friends`
-* At least one of the tag fields must be provided.
-****
-
-Examples:
-
-* `deletetag 1 t/friends` +
-Deletes the tag `friends` from the person index `1`.
-* `deletetag 2 t/friends t/colleagues` +
-Deletes the tag `friends` and `colleagues` from the person index `2`.
-
-[TIP]
-You can remove all the person's tags by typing `edit INDEX t/` without specifying any tags after it.
-Refer to the link:#edit[Edit] section above for more details.
 
 === Selecting a person : `select`
 
@@ -482,6 +436,61 @@ e.g. `Remove 1` +
 Command Format - `Change d/13.11.1997` +
 The above command will change the due date of the reminder to the new date. +
 
+
+// tag::findtag[]
+
+=== Locating persons by tag: `findtag`
+
+Finds persons whose tags contain any of the given keywords. +
+Format: `findtag KEYWORD [MORE_KEYWORDS]`
+
+[TIP]
+Make sure there are no whitespaces between `find` and `tag`!
+
+****
+* Given three people with tags: `John Doe t/Friends`, `Hans Gruber t/Friends`, and `Bo Yang t/Colleagues`
+* The search is case insensitive. e.g `friends` will match `Friends`
+* All the tags are searched.
+* Only full words will be matched e.g. `Friend` will not match `Friends`
+* Persons matching at least one keyword will be returned (i.e. `OR` search). e.g. `friends` will return `John Doe`, `Hans Gruber`
+****
+
+Examples:
+
+* `findtag friends` +
+Returns `John Doe` and `Hans Gruber`
+* `findtag friends colleagues` +
+Returns any person having tags `Friends` or `Colleagues`
+
+// end::findtag[]
+
+// tag::deletetag[]
+=== Deleting a person's tag : `deletetag`
+
+Deletes the tag(s) of an existing person in the address book. +
+Format: `deletetag INDEX [t/TAG]...`
+
+****
+* Deletes the tag of the person at the specified `INDEX`. The index refers to the index number shown in the last person listing. The index *must be a positive integer* 1, 2, 3, ...
+* The search is case insensitive. e.g `friends` will match `Friends`
+* Only full words will be matched e.g. `Friend` will not match `Friends`
+* At least one of the tag fields must be provided.
+****
+
+Examples:
+
+* `deletetag 1 t/friends` +
+Deletes the tag `friends` from the person index `1`.
+* `deletetag 2 t/friends t/colleagues` +
+Deletes the tag `friends` and `colleagues` from the person index `2`.
+
+[TIP]
+You can remove all the person's tags by typing `edit INDEX t/` without specifying any tags after it.
+Refer to the link:#edit[Edit] section above for more details.
+
+// end::deletetag[]
+
+// tag::autocompletion[]
 === Auto-completion
 
 The command box has a auto-complete feature to provide suggestions to your commands. +
@@ -493,6 +502,24 @@ Type any letters to get some suggestions on what command to use.
 [TIP]
 To avoid accidentally auto-completion, you can press `ESC` to cancel and continue your input.
 
+// end::autocompletion[]
+
+// tag::backup[]
+=== Backing up your Weaver : `backup`
+
+Backup your address book information in Weaver. +
+
+Format: `backup` +
+
+****
+* Back up your address book information in Weaver according to your own accounts.
+* The file will be saved in the data folder of the following format:
+* [Account Username]addressbook-backup.xml
+****
+
+// end::backup[]
+
+// tag::clear[]
 === Clearing all entries : `clear`
 
 Clears all entries from the address book. +
@@ -511,18 +538,7 @@ Alternatively, you can also click the `X` button or the `Cancel` button. +
 [TIP]
 To interact solely with the keyboard, make your selection and press `SPACE` instead of `ENTER`!
 
-=== Backing up your Weaver : `backup`
-
-Backup your address book information in Weaver. +
-
-Format: `backup` +
-
-****
-* Back up your address book information in Weaver according to your own accounts.
-* The file will be saved in the data folder of the following format:
-* [Account Username]addressbook-backup.xml
-****
-
+// end::clear[]
 
 === Exiting the program : `exit`
 
