--- a/docs/team/peijunwei.adoc
+++ b/docs/team/peijunwei.adoc
@@ -19,7 +19,7 @@ Weaver is a desktop address book application used for CS2103T Software
 ---
 #Start of Extract [from: User Guide]#
 
-include::../UserGuide.adoc[tag=undoredo]
+include::../UserGuide.adoc[tag=findtag]
 
 #End of Extract#
 
