--- a/docs/team/peijunwei.adoc
+++ b/docs/team/peijunwei.adoc
@@ -12,6 +12,56 @@ Weaver is a desktop address book application used for CS2103T Software
  [https://github.com/CS2103AUG2017-W13-B2/main/blob/master/collated/main/pjunwei95.md[Functional code]]
  [https://github.com/CS2103AUG2017-W13-B2/main/blob/master/collated/test/pjunwei95.md[Test code]]
 
+=== Enhancement Added: Deleting a person's tag
+
+==== External behavior
+
+---
+#Start of Extract [from: User Guide]#
+
+//include::../UserGuide.adoc[tag=deletetag]
+
+#End of Extract#
+
+---
+
+==== Justification
+
+Currently, the existing tags are unable to be deleted. It can only be done through
+the `Edit` command which is repetitive and exhaustive to re-enter the existing tags and
+omit the tag that is to be deleted. Through this function, the user can delete the tag
+with ease.
+
+==== Implementation
+
+---
+#Start of Extract [from: Developer Guide]#
+
+//include::../DeveloperGuide.adoc[tag=deletepersontag]
+
+#End of Extract#
+
+---
+=== Enhancement Added: Locating persons by tag
+
+==== External behavior
+
+---
+#Start of Extract [from: User Guide]#
+
+//include::../UserGuide.adoc[tag=findtag]
+
+#End of Extract#
+
+---
+
+==== Justification
+
+While Weaver is able to list the addresses, it is unable to allow the user to view
+based on the tags they created. By locating a person by tag, the user can sort the list
+and find the tags as a result. This also remove the need for a favourite contact
+as the user just need to tag the address as "favourite" and find that tag.
+
 === Enhancement Added: Undo/Redo
 
 ==== External behavior
@@ -19,7 +69,11 @@ Weaver is a desktop address book application used for CS2103T Software
 ---
 #Start of Extract [from: User Guide]#
 
-include::../UserGuide.adoc[tag=findtag]
+//include::../UserGuide.adoc[tag=findtag]
+//include::../UserGuide.adoc[tag=deletetag]
+//include::../UserGuide.adoc[tag=autocompletion]
+//include::../UserGuide.adoc[tag=backup]
+//include::../UserGuide.adoc[tag=clear]
 
 #End of Extract#
 
@@ -28,17 +82,6 @@ include::../UserGuide.adoc[tag=findtag]
 ==== Justification
 
 {Justify the need for, and the current design (i.e. external behavior) of, the feature}
-
-==== Implementation
-
----
-#Start of Extract [from: Developer Guide]#
-
-include::../DeveloperGuide.adoc[tag=undoredo]
-
-#End of Extract#
-
----
 
 === Enhancement Proposed: Add command `remark`
 
