--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -577,17 +577,18 @@ There is no need to save manually.
 
 * *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/DATE_OF_BIRTH [t/TAG]...` +
 e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 b/13.10.1997 f/ t/friend t/colleague`
-* *Clear* : `clear`
+* *Clear* : `clear` +
+e.g. Press `ENTER`,`SPACE` or click
 * *Delete* : `delete INDEX` +
 e.g. `delete 3`
-* *Delete Person's Tags* : `delete/t INDEX [t/TAG]...` +
-e.g. `delete/t 3 t/colleagues`
+* *Delete Person's Tags* : `deletetag INDEX [t/TAG]...` +
+e.g. `deletetag 3 t/colleagues`
 * *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [b/DATE_OF_BIRTH] [t/TAG]...` +
 e.g. `edit 2 n/James Lee e/jameslee@example.com`
 * *Find* : `find KEYWORD [MORE_KEYWORDS]` +
 e.g. `find James Jake`
 * *Find by Tags* : `find/t KEYWORD [MORE_KEYWORDS]` +
-e.g. `find/t friends family`
+e.g. `findtag friends family`
 * *Customize tag color* : `color c/[COLOR] t/[TAG] t/[TAG] t/[MORE_TAGS]` +
 e.g. `color c/red t/friend t/family`
 * *Change font size* : `fs [FONT SIZE]` or  `fs +/-` +
@@ -607,3 +608,4 @@ e.g.`map 2`
 e.g. `facebook 1`
 * *Photo Index FilePath* : photo [Index] [FilePath] +
 e.g. `photo 1 /Users/ronaklakhotia/Desktop/Ronak.jpeg`
+* *Backup* : `backup` +
