--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -507,9 +507,12 @@ image::autocompletion.png[]
 
 Type any letters to get some suggestions on what command to use.
 
-=== Check whether the command is valid while the user is typing
+// tag::parse[]
+=== Check whether the command is valid while the user is typing (SINCE V1.5)
 
 The result display panel will show whether the command is valid while the user is typing.
+Also, the message displayed will tell the user exactly which part goes wrong.
+// end::parse[]
 
 === Clearing all entries : `clear`
 
