Add visuals to complement texts in user guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -296,10 +296,11 @@ The new account's username must be different from all previous ones.
 Change the color of one or more than one tags. +
 Format: `color [c/COLOR] [t/TAG]...`
 ****
-* The default color of tags is "orange".
+* The default color of tags is "orange"
 * You can change the color of more than one tag at a time
 * The colors supported are: "red", "blue", "green", "teal", "aqua", "black", "gray", "lime", "maroon", "navy","orange", "purple", "silver", "olive","white", "yellow" and "transparent"
-* You cannot change the color of a non existing tag.
+* You cannot change the color of a non existing tag
+* The color for tags that you have set will be stored in user preference
 ****
 
 Examples:
@@ -313,6 +314,8 @@ The `color` command fails as `invalid_color` is not supported.
 
 * `color t/not_existing_tag c/yellow` +
 The `color` command fails as `not_existing_tag` does not exit in current database.
+
+image::tagcolor.png[width="790"]
 
 // end::customizetagcolor[]
 
@@ -357,6 +360,7 @@ Format: `fs [FONT SIZE]` or `fs [+/-]`
 * The default font size is m.
 * The font size changed will be auto stored.
 * You can increase (or decrease) the font size by pressing the "+" (or "-") button in the right top corner.
+* The font size that you have choosen will be stored in user preference
 ****
 
 Examples:
@@ -368,6 +372,9 @@ Examples:
 * `fs +`
 
 * `fs -` +
+
+image::fs.png[width="790"]
+
 // end::customizefontsize[]
 
 // tag::facebook[]
@@ -409,6 +416,7 @@ Examples:
 
 * `map 2`
 
+image::map.png[width="790"]
 // end::map[]
 
 // tag::theme[]
@@ -420,7 +428,8 @@ Format: `theme [THEME]`
 ****
 * Supported themes are: dark, bright
 * The default theme is bright
-* You can also change the theme via theme button
+* You can also change the theme via "theme" button
+* The theme that you have choosen will be stored in user preference
 ****
 
 Examples:
@@ -428,6 +437,9 @@ Examples:
 * `theme dark`
 
 * `theme bright`
+
+image::theme.png[width="840"]
+
 // end::theme[]
 
 === Reminders Panel (SINCE V1.4) +
@@ -520,8 +532,14 @@ To avoid accidentally auto-completion, you can press `ESC` to cancel and continu
 // tag::parse[]
 === Check whether the command is valid while the user is typing (SINCE V1.5)
 
-The result display panel will show whether the command is valid while the user is typing.
-Also, the message displayed will tell the user exactly which part goes wrong.
+The result display panel will show whether the command is valid while you are typing.
+Also, the message displayed will tell you exactly which part goes wrong.
+
+image::valid.png[width="720"]
+
+image::pink.png[width="850"]
+
+image::invalid.png[width="790"]
 // end::parse[]
 
 
